# wiki-generator

./: .gitignore  HANDOFF_DEEPWIKI_COVERAGE_ENHANCEMENT_ITERATION.md  HANDOFF_READINESS_ITERATION.md  HANDOFF_READINESS_ITERATION_2.md  HANDOFF_STEP5.md  PHASE1_DECOMPOSITION_PLAN.md  PHASE1_PHASE2_PHASE3_READINESS_ITERATION_2_SPEC.md  PHASE1_PHASE2_PHASE3_READINESS_ITERATION_3_SPEC.md  PHASE1_PHASE2_PHASE3_READINESS_ITERATION_SPEC.md  PHASE1_STEP2_STEP3_PLANNING_CONDENSATES.md  PHASE1_STEP4_PLANNER_UPLOAD_BUNDLE_SPEC.md  PHASE2_PLAN_NORMALIZATION_SPEC.md  PHASE3_EVIDENCE_RETRIEVAL_SPEC.md  PHASE4_WRITING_SYNTHESIS_ITERATION_2_SPEC.md  PHASE4_WRITING_SYNTHESIS_SPEC.md  PHASE_DEEPWIKI_COVERAGE_ENHANCEMENT_ITERATION_SPEC.md  README.md  RUNBOOK.md  pyproject.toml
.pipeline/: PIPELINE_RUN.md  file-manifest.txt
.pipeline/stages/: 01-prompt-intent-agent.txt  02-source-text-grounding-agent.txt  03-requirement-normalizer-agent.txt  04-acceptance-criteria-agent.txt  05-python-runtime-agent.txt  06-architecture-planner-agent.txt  07-python-rule-compliance-agent.txt  08-package-planner-agent.txt  09-module-planner-agent.txt  10-symbol-planner-agent.txt  11-import-planner-agent.txt  12-test-planner-agent.txt  13-router-agent.txt
docs/: README.md
docs/handoffs/done/: HANDOFF_READINESS_ITERATION.md  HANDOFF_READINESS_ITERATION_2.md  HANDOFF_STEP5.md
docs/handoffs/not-done/: HANDOFF_DEEPWIKI_COVERAGE_ENHANCEMENT_ITERATION.md
docs/product-requirements/deepwiki-coverage-expansion/: README.md  input.md  phase_state.json
docs/product-requirements/deepwiki-scale-parity-next-phase/: input.md  phase_state.json
docs/specs/done/: PHASE1_DECOMPOSITION_PLAN.md  PHASE1_PHASE2_PHASE3_READINESS_ITERATION_2_SPEC.md  PHASE1_PHASE2_PHASE3_READINESS_ITERATION_3_SPEC.md  PHASE1_PHASE2_PHASE3_READINESS_ITERATION_SPEC.md  PHASE1_STEP2_STEP3_PLANNING_CONDENSATES.md  PHASE1_STEP5_RETRIEVAL_SUBSTRATE_SPEC.md  PHASE2_PLAN_NORMALIZATION_SPEC.md  PHASE4_WRITING_SYNTHESIS_ITERATION_2_SPEC.md  PHASE4_WRITING_SYNTHESIS_SPEC.md
docs/specs/future/: DEEPWIKI_OPEN_ARCHITECTURE_BORROWING_SPEC.md
docs/specs/not-done/: DEEPWIKI_COVERAGE_EXPANSION_IMPLEMENTATION_SPEC.md  PHASE_DEEPWIKI_COVERAGE_ENHANCEMENT_ITERATION_SPEC.md
gemini-gem/: GEM_INSTRUCTIONS.md  KICKOFF_PROMPT.md  UPLOAD_LIST.md
phase1_decomposition/: __init__.py
phase1_decomposition/core/: cli.py
phase1_decomposition/libs/: config.py  context.py  markdown.py  paths.py  util.py
scripts/: 00_setup_python312_vectors.sh  common.sh  nonlive_hierarchical_e2e.py  phase1_step1_decompose.sh  phase1_step2_condense.sh  phase1_step3_digest.sh  phase1_step4_bundle.sh  phase1_step5_build_retrieval.sh  phase2_step1_plan.sh  phase2_step1b_repair_plan.sh  phase2_step2_normalize_plan.sh  phase3_retrieve_evidence.sh  phase4_write_wiki.sh
src/wiki_generator/: cli.py
tests/: test_artifact_consistency.py  test_coverage_facets.py  test_coverage_signals.py  test_coverage_traceability.py  test_coverage_validation.py  test_deepwiki_scale_core.py  test_phase1.py  test_phase2_anti_compression.py  test_phase2_coverage_planning.py  test_phase2_enhancement_gate.py  test_phase2_obligation_gate.py  test_phase2_readiness.py  test_phase2_topic_catalog_planning.py  test_phase3.py  test_phase3_evidence_portfolios.py  test_phase3_evidenced_coverage.py  test_phase4.py  test_phase4_depth_budget.py  test_phase4_depth_profiles.py  test_phase4_generated_coverage.py  test_phase4_grounded.py  test_phase_wrappers.py  test_plan_truncation.py  test_relevant_source_map.py  test_topic_catalog.py
wiki_generator/: __init__.py
wiki_generator/core/: cli.py
wiki_generator/libs/: ids.py  tools.py
(+194 files in other folders)
