[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-generator"
version = "0.1.0"
description = "Turn a Python repo into a deterministic repo-analysis bundle + planner digest (no LLM), run a planning LLM, and normalize the plan for retrieval."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "PyYAML",
    "packaging",
]

[project.optional-dependencies]
# Local semantic-retrieval lane (rag/vectors.faiss). Heavy; opt-in.
embeddings = [
    "faiss-cpu",
    "numpy",
    "model2vec",
]
# Contextual AST-aware query previews (queries/results/grep-ast/*.md).
grepast = [
    "grep-ast",
    "tree-sitter-language-pack",
    "pathspec",
]
# Phase 2 Step 1 planning via Vertex AI Gemini (the `plan` command). Opt-in.
vertex = [
    "google-genai>=1.0",
]

[project.scripts]
wiki-generator = "wiki_generator.core.cli:main"

[tool.setuptools]
packages = [
    "wiki_generator",
    "wiki_generator.core",
    "wiki_generator.libs",
    "wiki_generator.libs.lanes",
    "wiki_generator.libs.digest",
    "wiki_generator.libs.commands",
    "wiki_generator.libs.plan_normalization",
]
